# macroecon-wrappy

./: .gitignore  LICENSE  Pipfile  README.md  setup.cfg
macroecon_wrappy/: __init__.py  auth.py  epoch.py  load.py  measure.py  metric.py  plots.py  utils.py
macroecon_wrappy/RM_sources/: fred.py
macroecon_wrappy/adapters/: __init__.py  adapter.py  fredapi.py  internet_archive.py  treasury_fiscaldata.py  yahoo.py
macroecon_wrappy/extractors/: __init__.py  extractor.py  nber.py  treasury.py  treasury_fiscaldata.py
macroecon_wrappy/extractors/data/: API Documentation _ U.S. Treasury Fiscal Data - 1.html  API Documentation _ U.S. Treasury Fiscal Data - 2.html
macroecon_wrappy/models/: classification.py
macroecon_wrappy/models/data/: pos_kw.txt
macroecon_wrappy/sources/: nber.py
macroecon_wrappy/static/: us_generation_yr.csv
notebooks/: README.md  repo_review.ipynb  test.html  test.ipynb  yfinance.cache
tests/: test_adapters.py  test_auth.py  test_epoch.py  test_extractors.py  test_load.py  test_measure.py  test_metric.py  test_plots.py
tests/data/: msft.csv  test-SECRETS.yaml  test_data.py
tests/data/fred/: DTB1YR.csv  MMMFFAQ027S.csv
