[metadata]
name = macroecon_wrappy
version = 0.1.0
author_email = information@mgmt-tech.org
url = https://github.com/IMTorgOpenDataTools/macroecon_wrappy
description = Wrapper for timeseries data across multiple macro econ domains and sources (FRED, BEA, BLS, IPUMS, etc.).
long_description = file: README.md
long_description_content_type = text/markdown
license = AGPL License

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    pandas 
    pyyaml 
    requests 
    plotnine 
    bs4 
    lxml 